Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -222,7 +222,7 @@ We obtain a very strong sensitivity to initial spatial conditions. Indeed, the r
 \centering
 \includegraphics[width=0.8\textwidth]{figures/relativedistance_metaparams}\\
 %\includegraphics[width=0.4\textwidth]{figures/alpha_beta_schemas}(Bottom) Corresponding stylised density grids\\\comment[JR]{je sais pas si c'est une bonne idee de mettre les grilles stylisees comme ca parce que ca donne une fausse idee des sorties du modele de generation}}
-\caption{\textbf{Relative distances of phase diagrams by initial spatial grids described by the meta-parameters of their generator.} Relative distance as a function of meta-parameters $\alpha$ (strength of preferential attachment) and $\beta$ (strength of diffusion process).
+\caption{\textbf{Relative distances of phase diagrams by initial spatial grids described by the meta-parameters of their generator.} Relative distance as a function of meta-parameters $\alpha$ (strength of preferential attachment) and $\beta$ (strength of diffusion process).}
 \label{fig:sugarscape-distance-meta}
 \end{figure}
 %%%%%%%%%%%%%
